Fix: Header Height on Mobile and Desktop

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -4,9 +4,9 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
- body {
+body {
     overflow-x: hidden;
- }
+}
 
 
 /* Toggle Styles */
@@ -47,8 +47,8 @@
 }
 
 #map {
-    bottom:0;
-    height: 78%;
+    bottom: 0;
+    height: 100%;
     left: 0;
     position: absolute;
     right: 0;
@@ -56,7 +56,6 @@
 
 #page-content-wrapper {
     overflow: hidden;
-    height: 10em;
     width: 100%;
     position: absolute;
     padding: 15px;
@@ -95,7 +94,7 @@
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
-    background: rgba(255,255,255,0.2);
+    background: rgba(255, 255, 255, 0.2);
 }
 
 .sidebar-nav li a:active,
@@ -103,18 +102,18 @@
     text-decoration: none;
 }
 
-.sidebar-nav > .sidebar-brand {
+.sidebar-nav>.sidebar-brand {
     height: 65px;
     font-size: 18px;
     line-height: 60px;
     color: #e5e3df;
 }
 
-.sidebar-nav > .sidebar-brand a {
+.sidebar-nav>.sidebar-brand a {
     color: #999999;
 }
 
-.sidebar-nav > .sidebar-brand a:hover {
+.sidebar-nav>.sidebar-brand a:hover {
     color: #fff;
     background: none;
 }
@@ -162,24 +161,19 @@
     #wrapper {
         padding-left: 250px;
     }
-
     #wrapper.toggled {
         padding-left: 0;
     }
-
     #sidebar-wrapper {
         width: 300px;
     }
-
     #wrapper.toggled #sidebar-wrapper {
         width: 0;
     }
-
     #page-content-wrapper {
         padding: 20px 20px 20px 21em;
         position: relative;
     }
-
     #wrapper.toggled #page-content-wrapper {
         position: relative;
         margin-right: 0;
